y.output
状态 27 conflicts: 1 shift/reduce


语法

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT
    8         | ENUMERATION_CONSTANT

    9 enumeration_constant: IDENTIFIER

   10 string: STRING_LITERAL
   11       | FUNC_NAME

   12 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   13 generic_assoc_list: generic_association
   14                   | generic_assoc_list ',' generic_association

   15 generic_association: type_name ':' assignment_expression
   16                    | DEFAULT ':' assignment_expression

   17 postfix_expression: primary_expression
   18                   | postfix_expression '[' expression ']'
   19                   | postfix_expression '(' ')'
   20                   | postfix_expression '(' argument_expression_list ')'
   21                   | postfix_expression '.' IDENTIFIER
   22                   | postfix_expression PTR_OP IDENTIFIER
   23                   | postfix_expression INC_OP
   24                   | postfix_expression DEC_OP
   25                   | '(' type_name ')' '{' initializer_list '}'
   26                   | '(' type_name ')' '{' initializer_list ',' '}'

   27 argument_expression_list: assignment_expression
   28                         | argument_expression_list ',' assignment_expression

   29 unary_expression: postfix_expression
   30                 | INC_OP unary_expression
   31                 | DEC_OP unary_expression
   32                 | unary_operator cast_expression
   33                 | SIZEOF unary_expression
   34                 | SIZEOF '(' type_name ')'
   35                 | ALIGNOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression '&' equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression '^' and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression '|' exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 constant_expression: conditional_expression

   90 declaration: declaration_specifiers ';'
   91            | declaration_specifiers init_declarator_list ';'
   92            | static_assert_declaration

   93 declaration_specifiers: storage_class_specifier declaration_specifiers
   94                       | storage_class_specifier
   95                       | type_specifier declaration_specifiers
   96                       | type_specifier
   97                       | type_qualifier declaration_specifiers
   98                       | type_qualifier
   99                       | function_specifier declaration_specifiers
  100                       | function_specifier
  101                       | alignment_specifier declaration_specifiers
  102                       | alignment_specifier

  103 init_declarator_list: init_declarator
  104                     | init_declarator_list ',' init_declarator

  105 init_declarator: declarator '=' initializer
  106                | declarator

  107 storage_class_specifier: TYPEDEF
  108                        | EXTERN
  109                        | STATIC
  110                        | THREAD_LOCAL
  111                        | AUTO
  112                        | REGISTER

  113 type_specifier: VOID
  114               | CHAR
  115               | SHORT
  116               | INT
  117               | LONG
  118               | FLOAT
  119               | DOUBLE
  120               | SIGNED
  121               | UNSIGNED
  122               | BOOL
  123               | COMPLEX
  124               | IMAGINARY
  125               | atomic_type_specifier
  126               | struct_or_union_specifier
  127               | enum_specifier
  128               | TYPEDEF_NAME

  129 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  130                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union IDENTIFIER

  132 struct_or_union: STRUCT
  133                | UNION

  134 struct_declaration_list: struct_declaration
  135                        | struct_declaration_list struct_declaration

  136 struct_declaration: specifier_qualifier_list ';'
  137                   | specifier_qualifier_list struct_declarator_list ';'
  138                   | static_assert_declaration

  139 specifier_qualifier_list: type_specifier specifier_qualifier_list
  140                         | type_specifier
  141                         | type_qualifier specifier_qualifier_list
  142                         | type_qualifier

  143 struct_declarator_list: struct_declarator
  144                       | struct_declarator_list ',' struct_declarator

  145 struct_declarator: ':' constant_expression
  146                  | declarator ':' constant_expression
  147                  | declarator

  148 enum_specifier: ENUM '{' enumerator_list '}'
  149               | ENUM '{' enumerator_list ',' '}'
  150               | ENUM IDENTIFIER '{' enumerator_list '}'
  151               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM IDENTIFIER

  153 enumerator_list: enumerator
  154                | enumerator_list ',' enumerator

  155 enumerator: enumeration_constant '=' constant_expression
  156           | enumeration_constant

  157 atomic_type_specifier: ATOMIC '(' type_name ')'

  158 type_qualifier: CONST
  159               | RESTRICT
  160               | VOLATILE
  161               | ATOMIC

  162 function_specifier: INLINE
  163                   | NORETURN

  164 alignment_specifier: ALIGNAS '(' type_name ')'
  165                    | ALIGNAS '(' constant_expression ')'

  166 declarator: pointer direct_declarator
  167           | direct_declarator

  168 direct_declarator: IDENTIFIER
  169                  | '(' declarator ')'
  170                  | direct_declarator '[' ']'
  171                  | direct_declarator '[' '*' ']'
  172                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  173                  | direct_declarator '[' STATIC assignment_expression ']'
  174                  | direct_declarator '[' type_qualifier_list '*' ']'
  175                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  176                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  177                  | direct_declarator '[' type_qualifier_list ']'
  178                  | direct_declarator '[' assignment_expression ']'
  179                  | direct_declarator '(' parameter_type_list ')'
  180                  | direct_declarator '(' ')'
  181                  | direct_declarator '(' identifier_list ')'

  182 pointer: '*' type_qualifier_list pointer
  183        | '*' type_qualifier_list
  184        | '*' pointer
  185        | '*'

  186 type_qualifier_list: type_qualifier
  187                    | type_qualifier_list type_qualifier

  188 parameter_type_list: parameter_list ',' ELLIPSIS
  189                    | parameter_list

  190 parameter_list: parameter_declaration
  191               | parameter_list ',' parameter_declaration

  192 parameter_declaration: declaration_specifiers declarator
  193                      | declaration_specifiers abstract_declarator
  194                      | declaration_specifiers

  195 identifier_list: IDENTIFIER
  196                | identifier_list ',' IDENTIFIER

  197 type_name: specifier_qualifier_list abstract_declarator
  198          | specifier_qualifier_list

  199 abstract_declarator: pointer direct_abstract_declarator
  200                    | pointer
  201                    | direct_abstract_declarator

  202 direct_abstract_declarator: '(' abstract_declarator ')'
  203                           | '[' ']'
  204                           | '[' '*' ']'
  205                           | '[' STATIC type_qualifier_list assignment_expression ']'
  206                           | '[' STATIC assignment_expression ']'
  207                           | '[' type_qualifier_list STATIC assignment_expression ']'
  208                           | '[' type_qualifier_list assignment_expression ']'
  209                           | '[' type_qualifier_list ']'
  210                           | '[' assignment_expression ']'
  211                           | direct_abstract_declarator '[' ']'
  212                           | direct_abstract_declarator '[' '*' ']'
  213                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  214                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  215                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  216                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  217                           | direct_abstract_declarator '[' type_qualifier_list ']'
  218                           | direct_abstract_declarator '[' assignment_expression ']'
  219                           | '(' ')'
  220                           | '(' parameter_type_list ')'
  221                           | direct_abstract_declarator '(' ')'
  222                           | direct_abstract_declarator '(' parameter_type_list ')'

  223 initializer: '{' initializer_list '}'
  224            | '{' initializer_list ',' '}'
  225            | assignment_expression

  226 initializer_list: designation initializer
  227                 | initializer
  228                 | initializer_list ',' designation initializer
  229                 | initializer_list ',' initializer

  230 designation: designator_list '='

  231 designator_list: designator
  232                | designator_list designator

  233 designator: '[' constant_expression ']'
  234           | '.' IDENTIFIER

  235 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  236 statement: labeled_statement
  237          | compound_statement
  238          | expression_statement
  239          | selection_statement
  240          | iteration_statement
  241          | jump_statement

  242 labeled_statement: IDENTIFIER ':' statement
  243                  | CASE constant_expression ':' statement
  244                  | DEFAULT ':' statement

  245 compound_statement: '{' '}'
  246                   | '{' block_item_list '}'

  247 block_item_list: block_item
  248                | block_item_list block_item

  249 block_item: declaration
  250           | statement

  251 expression_statement: ';'
  252                     | expression ';'

  253 selection_statement: IF '(' expression ')' statement
  254                    | IF '(' expression ')' statement ELSE statement
  255                    | SWITCH '(' expression ')' statement

  256 iteration_statement: WHILE '(' expression ')' statement
  257                    | DO statement WHILE '(' expression ')' ';'
  258                    | FOR '(' expression_statement expression_statement ')' statement
  259                    | FOR '(' expression_statement expression_statement expression ')' statement
  260                    | FOR '(' declaration expression_statement ')' statement
  261                    | FOR '(' declaration expression_statement expression ')' statement

  262 jump_statement: GOTO IDENTIFIER ';'
  263               | CONTINUE ';'
  264               | BREAK ';'
  265               | RETURN ';'
  266               | RETURN expression ';'

  267 translation_unit: external_declaration
  268                 | translation_unit external_declaration

  269 external_declaration: function_definition
  270                     | declaration

  271 function_definition: declaration_specifiers declarator declaration_list compound_statement
  272                    | declaration_specifiers declarator compound_statement

  273 declaration_list: declaration
  274                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 41
'%' (37) 47
'&' (38) 36 63
'(' (40) 4 12 19 20 25 26 34 35 43 157 164 165 169 179 180 181 202
    219 220 221 222 235 253 254 255 256 257 258 259 260 261
')' (41) 4 12 19 20 25 26 34 35 43 157 164 165 169 179 180 181 202
    219 220 221 222 235 253 254 255 256 257 258 259 260 261
'*' (42) 37 45 171 174 182 183 184 185 204 212
'+' (43) 38 49
',' (44) 12 14 26 28 88 104 144 149 151 154 188 191 196 224 228 229
    235
'-' (45) 39 50
'.' (46) 21 234
'/' (47) 46
':' (58) 15 16 73 145 146 242 243 244
';' (59) 90 91 136 137 235 251 252 257 262 263 264 265 266
'<' (60) 55
'=' (61) 76 105 155 230
'>' (62) 56
'?' (63) 73
'[' (91) 18 170 171 172 173 174 175 176 177 178 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 233
']' (93) 18 170 171 172 173 174 175 176 177 178 203 204 205 206 207
    208 209 210 211 212 213 214 215 216 217 218 233
'^' (94) 65
'{' (123) 25 26 129 130 148 149 150 151 223 224 245 246
'|' (124) 67
'}' (125) 25 26 129 130 148 149 150 151 223 224 245 246
'~' (126) 40
error (256)
LOWER_THAN_ELSE (258)
ELSE (259) 254
IDENTIFIER (260) 1 9 21 22 130 131 150 151 152 168 195 196 234 242
    262
I_CONSTANT (261) 6
F_CONSTANT (262) 7
STRING_LITERAL (263) 10 235
FUNC_NAME (264) 11
SIZEOF (265) 33 34
PTR_OP (266) 22
INC_OP (267) 23 30
DEC_OP (268) 24 31
LEFT_OP (269) 52
RIGHT_OP (270) 53
LE_OP (271) 57
GE_OP (272) 58
EQ_OP (273) 60
NE_OP (274) 61
AND_OP (275) 69
OR_OP (276) 71
MUL_ASSIGN (277) 77
DIV_ASSIGN (278) 78
MOD_ASSIGN (279) 79
ADD_ASSIGN (280) 80
SUB_ASSIGN (281) 81
LEFT_ASSIGN (282) 82
RIGHT_ASSIGN (283) 83
AND_ASSIGN (284) 84
XOR_ASSIGN (285) 85
OR_ASSIGN (286) 86
TYPEDEF_NAME (287) 128
ENUMERATION_CONSTANT (288) 8
TYPEDEF (289) 107
EXTERN (290) 108
STATIC (291) 109 172 173 175 205 206 207 213 214 216
AUTO (292) 111
REGISTER (293) 112
INLINE (294) 162
CONST (295) 158
RESTRICT (296) 159
VOLATILE (297) 160
BOOL (298) 122
CHAR (299) 114
SHORT (300) 115
INT (301) 116
LONG (302) 117
SIGNED (303) 120
UNSIGNED (304) 121
FLOAT (305) 118
DOUBLE (306) 119
VOID (307) 113
COMPLEX (308) 123
IMAGINARY (309) 124
STRUCT (310) 132
UNION (311) 133
ENUM (312) 148 149 150 151 152
ELLIPSIS (313) 188
CASE (314) 243
DEFAULT (315) 16 244
IF (316) 253 254
SWITCH (317) 255
WHILE (318) 256 257
DO (319) 257
FOR (320) 258 259 260 261
GOTO (321) 262
CONTINUE (322) 263
BREAK (323) 264
RETURN (324) 265 266
ALIGNAS (325) 164 165
ALIGNOF (326) 35
ATOMIC (327) 157 161
GENERIC (328) 12
NORETURN (329) 163
STATIC_ASSERT (330) 235
THREAD_LOCAL (331) 110


Nonterminals, with rules where they appear

$accept (101)
    左： 0
primary_expression (102)
    左： 1 2 3 4 5, 右： 17
constant (103)
    左： 6 7 8, 右： 2
enumeration_constant (104)
    左： 9, 右： 155 156
string (105)
    左： 10 11, 右： 3
generic_selection (106)
    左： 12, 右： 5
generic_assoc_list (107)
    左： 13 14, 右： 12 14
generic_association (108)
    左： 15 16, 右： 13 14
postfix_expression (109)
    左： 17 18 19 20 21 22 23 24 25 26, 右： 18 19 20 21 22 23
    24 29
argument_expression_list (110)
    左： 27 28, 右： 20 28
unary_expression (111)
    左： 29 30 31 32 33 34 35, 右： 30 31 33 42 75
unary_operator (112)
    左： 36 37 38 39 40 41, 右： 32
cast_expression (113)
    左： 42 43, 右： 32 43 44 45 46 47
multiplicative_expression (114)
    左： 44 45 46 47, 右： 45 46 47 48 49 50
additive_expression (115)
    左： 48 49 50, 右： 49 50 51 52 53
shift_expression (116)
    左： 51 52 53, 右： 52 53 54 55 56 57 58
relational_expression (117)
    左： 54 55 56 57 58, 右： 55 56 57 58 59 60 61
equality_expression (118)
    左： 59 60 61, 右： 60 61 62 63
and_expression (119)
    左： 62 63, 右： 63 64 65
exclusive_or_expression (120)
    左： 64 65, 右： 65 66 67
inclusive_or_expression (121)
    左： 66 67, 右： 67 68 69
logical_and_expression (122)
    左： 68 69, 右： 69 70 71
logical_or_expression (123)
    左： 70 71, 右： 71 72 73
conditional_expression (124)
    左： 72 73, 右： 73 74 89
assignment_expression (125)
    左： 74 75, 右： 12 15 16 27 28 75 87 88 172 173 175 176 178
    205 206 207 208 210 213 214 215 216 218 225
assignment_operator (126)
    左： 76 77 78 79 80 81 82 83 84 85 86, 右： 75
expression (127)
    左： 87 88, 右： 4 18 73 88 252 253 254 255 256 257 259 261
    266
constant_expression (128)
    左： 89, 右： 145 146 155 165 233 235 243
declaration (129)
    左： 90 91 92, 右： 249 260 261 270 273 274
declaration_specifiers (130)
    左： 93 94 95 96 97 98 99 100 101 102, 右： 90 91 93 95 97
    99 101 192 193 194 271 272
init_declarator_list (131)
    左： 103 104, 右： 91 104
init_declarator (132)
    左： 105 106, 右： 103 104
storage_class_specifier (133)
    左： 107 108 109 110 111 112, 右： 93 94
type_specifier (134)
    左： 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127 128, 右： 95 96 139 140
struct_or_union_specifier (135)
    左： 129 130 131, 右： 126
struct_or_union (136)
    左： 132 133, 右： 129 130 131
struct_declaration_list (137)
    左： 134 135, 右： 129 130 135
struct_declaration (138)
    左： 136 137 138, 右： 134 135
specifier_qualifier_list (139)
    左： 139 140 141 142, 右： 136 137 139 141 197 198
struct_declarator_list (140)
    左： 143 144, 右： 137 144
struct_declarator (141)
    左： 145 146 147, 右： 143 144
enum_specifier (142)
    左： 148 149 150 151 152, 右： 127
enumerator_list (143)
    左： 153 154, 右： 148 149 150 151 154
enumerator (144)
    左： 155 156, 右： 153 154
atomic_type_specifier (145)
    左： 157, 右： 125
type_qualifier (146)
    左： 158 159 160 161, 右： 97 98 141 142 186 187
function_specifier (147)
    左： 162 163, 右： 99 100
alignment_specifier (148)
    左： 164 165, 右： 101 102
declarator (149)
    左： 166 167, 右： 105 106 146 147 169 192 271 272
direct_declarator (150)
    左： 168 169 170 171 172 173 174 175 176 177 178 179 180 181,
    右： 166 167 170 171 172 173 174 175 176 177 178 179 180 181
pointer (151)
    左： 182 183 184 185, 右： 166 182 184 199 200
type_qualifier_list (152)
    左： 186 187, 右： 172 174 175 176 177 182 183 187 205 207
    208 209 213 215 216 217
parameter_type_list (153)
    左： 188 189, 右： 179 220 222
parameter_list (154)
    左： 190 191, 右： 188 189 191
parameter_declaration (155)
    左： 192 193 194, 右： 190 191
identifier_list (156)
    左： 195 196, 右： 181 196
type_name (157)
    左： 197 198, 右： 15 25 26 34 35 43 157 164
abstract_declarator (158)
    左： 199 200 201, 右： 193 197 202
direct_abstract_declarator (159)
    左： 202 203 204 205 206 207 208 209 210 211 212 213 214 215
    216 217 218 219 220 221 222, 右： 199 201 211 212 213 214 215
    216 217 218 221 222
initializer (160)
    左： 223 224 225, 右： 105 226 227 228 229
initializer_list (161)
    左： 226 227 228 229, 右： 25 26 223 224 228 229
designation (162)
    左： 230, 右： 226 228
designator_list (163)
    左： 231 232, 右： 230 232
designator (164)
    左： 233 234, 右： 231 232
static_assert_declaration (165)
    左： 235, 右： 92 138
statement (166)
    左： 236 237 238 239 240 241, 右： 242 243 244 250 253 254
    255 256 257 258 259 260 261
labeled_statement (167)
    左： 242 243 244, 右： 236
compound_statement (168)
    左： 245 246, 右： 237 271 272
block_item_list (169)
    左： 247 248, 右： 246 248
block_item (170)
    左： 249 250, 右： 247 248
expression_statement (171)
    左： 251 252, 右： 238 258 259 260 261
selection_statement (172)
    左： 253 254 255, 右： 239
iteration_statement (173)
    左： 256 257 258 259 260 261, 右： 240
jump_statement (174)
    左： 262 263 264 265 266, 右： 241
translation_unit (175)
    左： 267 268, 右： 0 268
external_declaration (176)
    左： 269 270, 右： 267 268
function_definition (177)
    左： 271 272, 右： 269
declaration_list (178)
    左： 273 274, 右： 271 274


State 0

    0 $accept: . translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                转到状态 31
    declaration_specifiers     转到状态 32
    storage_class_specifier    转到状态 33
    type_specifier             转到状态 34
    struct_or_union_specifier  转到状态 35
    struct_or_union            转到状态 36
    enum_specifier             转到状态 37
    atomic_type_specifier      转到状态 38
    type_qualifier             转到状态 39
    function_specifier         转到状态 40
    alignment_specifier        转到状态 41
    static_assert_declaration  转到状态 42
    translation_unit           转到状态 43
    external_declaration       转到状态 44
    function_definition        转到状态 45


State 1

  128 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 128 (type_specifier)


State 2

  107 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 107 (storage_class_specifier)


State 3

  108 storage_class_specifier: EXTERN .

    $default  reduce using rule 108 (storage_class_specifier)


State 4

  109 storage_class_specifier: STATIC .

    $default  reduce using rule 109 (storage_class_specifier)


State 5

  111 storage_class_specifier: AUTO .

    $default  reduce using rule 111 (storage_class_specifier)


State 6

  112 storage_class_specifier: REGISTER .

    $default  reduce using rule 112 (storage_class_specifier)


State 7

  162 function_specifier: INLINE .

    $default  reduce using rule 162 (function_specifier)


State 8

  158 type_qualifier: CONST .

    $default  reduce using rule 158 (type_qualifier)


State 9

  159 type_qualifier: RESTRICT .

    $default  reduce using rule 159 (type_qualifier)


State 10

  160 type_qualifier: VOLATILE .

    $default  reduce using rule 160 (type_qualifier)


State 11

  122 type_specifier: BOOL .

    $default  reduce using rule 122 (type_specifier)


State 12

  114 type_specifier: CHAR .

    $default  reduce using rule 114 (type_specifier)


State 13

  115 type_specifier: SHORT .

    $default  reduce using rule 115 (type_specifier)


State 14

  116 type_specifier: INT .

    $default  reduce using rule 116 (type_specifier)


State 15

  117 type_specifier: LONG .

    $default  reduce using rule 117 (type_specifier)


State 16

  120 type_specifier: SIGNED .

    $default  reduce using rule 120 (type_specifier)


State 17

  121 type_specifier: UNSIGNED .

    $default  reduce using rule 121 (type_specifier)


State 18

  118 type_specifier: FLOAT .

    $default  reduce using rule 118 (type_specifier)


State 19

  119 type_specifier: DOUBLE .

    $default  reduce using rule 119 (type_specifier)


State 20

  113 type_specifier: VOID .

    $default  reduce using rule 113 (type_specifier)


State 21

  123 type_specifier: COMPLEX .

    $default  reduce using rule 123 (type_specifier)


State 22

  124 type_specifier: IMAGINARY .

    $default  reduce using rule 124 (type_specifier)


State 23

  132 struct_or_union: STRUCT .

    $default  reduce using rule 132 (struct_or_union)


State 24

  133 struct_or_union: UNION .

    $default  reduce using rule 133 (struct_or_union)


State 25

  148 enum_specifier: ENUM . '{' enumerator_list '}'
  149               | ENUM . '{' enumerator_list ',' '}'
  150               | ENUM . IDENTIFIER '{' enumerator_list '}'
  151               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  152               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  164 alignment_specifier: ALIGNAS . '(' type_name ')'
  165                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  157 atomic_type_specifier: ATOMIC . '(' type_name ')'
  161 type_qualifier: ATOMIC .

    '('  shift, and go to state 49

    '('       [reduce using rule 161 (type_qualifier)]
    $default  reduce using rule 161 (type_qualifier)


State 28

  163 function_specifier: NORETURN .

    $default  reduce using rule 163 (function_specifier)


State 29

  235 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  110 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 110 (storage_class_specifier)


State 31

  270 external_declaration: declaration .

    $default  reduce using rule 270 (external_declaration)


State 32

   90 declaration: declaration_specifiers . ';'
   91            | declaration_specifiers . init_declarator_list ';'
  271 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  272                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  转到状态 55
    init_declarator       转到状态 56
    declarator            转到状态 57
    direct_declarator     转到状态 58
    pointer               转到状态 59


State 33

   93 declaration_specifiers: storage_class_specifier . declaration_specifiers
   94                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     转到状态 60
    storage_class_specifier    转到状态 33
    type_specifier             转到状态 34
    struct_or_union_specifier  转到状态 35
    struct_or_union            转到状态 36
    enum_specifier             转到状态 37
    atomic_type_specifier      转到状态 38
    type_qualifier             转到状态 39
    function_specifier         转到状态 40
    alignment_specifier        转到状态 41


State 34

   95 declaration_specifiers: type_specifier . declaration_specifiers
   96                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     转到状态 61
    storage_class_specifier    转到状态 33
    type_specifier             转到状态 34
    struct_or_union_specifier  转到状态 35
    struct_or_union            转到状态 36
    enum_specifier             转到状态 37
    atomic_type_specifier      转到状态 38
    type_qualifier             转到状态 39
    function_specifier         转到状态 40
    alignment_specifier        转到状态 41


State 35

  126 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 126 (type_specifier)


State 36

  129 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  130                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  131                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


State 37

  127 type_specifier: enum_specifier .

    $default  reduce using rule 127 (type_specifier)


State 38

  125 type_specifier: atomic_type_specifier .

    $default  reduce using rule 125 (type_specifier)


State 39

   97 declaration_specifiers: type_qualifier . declaration_specifiers
   98                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     转到状态 64
    storage_class_specifier    转到状态 33
    type_specifier             转到状态 34
    struct_or_union_specifier  转到状态 35
    struct_or_union            转到状态 36
    enum_specifier             转到状态 37
    atomic_type_specifier      转到状态 38
    type_qualifier             转到状态 39
    function_specifier         转到状态 40
    alignment_specifier        转到状态 41


State 40

   99 declaration_specifiers: function_specifier . declaration_specifiers
  100                       | function_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 100 (declaration_specifiers)
